Version 2.0, xx May 2004

 25. Preliminary RTAI/user-space support. posterLib requires a more
     complicated implementation: as of now, posters can be shared between
     RTAI-tasks and linux processes but this breaks the real-time
     properties of RTAI-tasks.
 24. Added taskDelete() regression test.
 23. Added --with-debug option to configure script. It allows the
     selection of independant components to debug.
 22. Added h2devClean() in comLib. This was previously defined in h2.c
     but it was problematic for user-space RTAI version. Bumped comLib
     minor.
 21. Added taskOptionsSet()/taskOptionsGet() in taskLib and a new task's
     option bit PORTLIB_UNPRIVILEGED. This is used internally by comLib
     for user space communication under RTAI. Bumped portLib minor.
 20. Reworked makefiles and configure scripts in order to be able to
     compile both kernel modules and userspace libraries with the same
     configure; make; make install step under RTAI. 
 19. Added RTAI support.
 18. Added regression tests.
 17. Split h2devLib and smMemLib into os-independant and os-specific parts.
 16. Use memcpy instead of bcopy everywhere.
 15. Removed system-specific includes from headers, and modified some
     structures definitions to use standard C types instead of posix
     types (in particular changed uid_t into long, key_t into long and
     u_long into unsigned long). This shouldn't break anything.
 14. Implemented and added semMCreate() and converted commonStruct.c and
     h2timerLib.c functions to use it instead of pthread_*
     routines. Added h2timerEnd() that undo h2timerInit() actions. Made
     SEM_ID an opaque data type in order to hide some pthread-specific
     stuff from headers.
 13. Made OS_TCB an opaque data type and put the definition in
     taskLib.c. Moved the errnoGet,Set() functions into taskLib.c since
     they need access to the TCB. Replaced tcb->name by taskName() calls
     in mboxLib.c.