@@ -1,4 +1,4 @@
-#! /bin/sh
+#!/bin/sh
 #
 # install - install a program, script, or datafile
 # This comes from X11R5 (mit/util/scripts/install.sh).
@@ -23,7 +23,6 @@
 # from scratch.  It can only install one file at a time, a restriction
 # shared with many OS's install programs.
 
-# $LAAS$
 
 # set DOITPROG to echo to test this script
 
@@ -116,16 +115,17 @@ fi
 if [ x"$dir_arg" != x ]; then
 	dst=$src
 	src=""
-
+	
 	if [ -d $dst ]; then
 		instcmd=:
+		chmodcmd=""
 	else
 		instcmd=mkdir
 	fi
 else
 
 # Waiting for this to be detected by the "$instcmd $src $dsttmp" command
-# might cause directories to be created, which would be especially bad
+# might cause directories to be created, which would be especially bad 
 # if $src (and thus $dsttmp) contains '*'.
 
 	if [ -f $src -o -d $src ]
@@ -135,7 +135,7 @@ else
 		echo "install:  $src does not exist"
 		exit 1
 	fi
-
+	
 	if [ x"$dst" = x ]
 	then
 		echo "install:	no destination specified"
@@ -163,7 +163,7 @@ dstdir=`echo $dst | sed -e 's,[^/]*$,,;s,/$,,;s,^$,.,'`
 
 # Skip lots of stat calls in the usual case.
 if [ ! -d "$dstdir" ]; then
-defaultIFS='
+defaultIFS='	
 '
 IFS="${IFS-${defaultIFS}}"
 
@@ -202,32 +202,56 @@ else
 
 # If we're going to rename the final executable, determine the name now.
 
-	if [ x"$transformarg" = x ]
+	if [ x"$transformarg" = x ] 
 	then
 		dstfile=`basename $dst`
 	else
-		dstfile=`basename $dst $transformbasename |
+		dstfile=`basename $dst $transformbasename | 
 			sed $transformarg`$transformbasename
 	fi
 
 # don't allow the sed command to completely eliminate the filename
 
-	if [ x"$dstfile" = x ]
+	if [ x"$dstfile" = x ] 
 	then
 		dstfile=`basename $dst`
 	else
 		true
 	fi
 
+# don't install file if destination exists and is identical
+
+	dstfin=$dstdir/$dstfile
+
+	if cmp -s $src $dstfin
+	then
+	    echo "install: $dstdir/$dstfile is unchanged"
+	else
+
 # Make a temp file name in the proper directory.
 
-	dsttmp=$dstdir/#inst.$$#
+	    dsttmp=$dstdir/#inst.$$#
 
 # Move or copy the file name to the temp name
 
-	$doit $instcmd $src $dsttmp &&
+	    $doit $instcmd $src $dsttmp &&
 
-	trap "rm -f ${dsttmp}" 0 &&
+	    trap "rm -f ${dsttmp}" 0 &&
+
+# Strip the file
+
+	    if [ x"$stripcmd" != x ]
+	    then
+		$doit $stripcmd $dsttmp;
+	    else
+		true;
+	    fi &&
+
+# Now rename the file to the real destination.
+
+	    $doit $rmcmd -f $dstdir/$dstfile &&
+	    $doit $mvcmd $dsttmp $dstdir/$dstfile 
+	fi &&
 
 # and set any options; do chmod last to preserve setuid bits
 
@@ -235,15 +259,9 @@ else
 # ignore errors from any of these, just make sure not to ignore
 # errors from the above "$doit $instcmd $src $dsttmp" command.
 
-	if [ x"$chowncmd" != x ]; then $doit $chowncmd $dsttmp; else true;fi &&
-	if [ x"$chgrpcmd" != x ]; then $doit $chgrpcmd $dsttmp; else true;fi &&
-	if [ x"$stripcmd" != x ]; then $doit $stripcmd $dsttmp; else true;fi &&
-	if [ x"$chmodcmd" != x ]; then $doit $chmodcmd $dsttmp; else true;fi &&
-
-# Now rename the file to the real destination.
-
-	$doit $rmcmd -f $dstdir/$dstfile &&
-	$doit $mvcmd $dsttmp $dstdir/$dstfile
+	if [ x"$chowncmd" != x ]; then $doit $chowncmd $dstfin; else true;fi &&
+	if [ x"$chgrpcmd" != x ]; then $doit $chgrpcmd $dstfin; else true;fi &&
+	if [ x"$chmodcmd" != x ]; then $doit $chmodcmd $dstfin; else true;fi
 
 fi &&
 
